Add Searchkit service

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -22,3 +22,10 @@ services:
       - ./nutch/seed.txt:/root/nutch/urls/seed.txt:ro
     tty: true
     command: bash
+
+  searchkit:
+    volumes:
+      - ./searchkit/src:/app/src:ro
+      - ./searchkit/public:/app/public:ro
+    ports:
+      - 35729:35729
