--- a/es-init/Dockerfile
+++ b/es-init/Dockerfile
@@ -7,12 +7,12 @@ WORKDIR /app
 RUN curl https://raw.githubusercontent.com/eficode/wait-for/master/wait-for -o /app/wait-for && \
       chmod +x /app/wait-for
 
-COPY init-elastic /app/
+COPY init-elastic mapping.json /app/
 
 RUN chmod +x /app/init-elastic
 
-ENV ES_HOST=localhost \
+ENV ES_HOST=elasticsearch \
     ES_PORT=9200 \
-    TIME_OUT=30
+    TIME_OUT=120
 
 CMD sh /app/wait-for ${ES_HOST}:${ES_PORT} -t ${TIME_OUT} -- /app/init-elastic
