--- a/es-init/mapping.json
+++ b/es-init/mapping.json
@@ -42,17 +42,15 @@
         },
 
         "contentLength": {
-          "type": ""
+          "type": "long"
         },
 
         "lastModified": {
-          "type": "date",
-          "format": "yyyy-MM-dd'T'HH:mm:ssZ"
+          "type": "date"
         },
 
         "date": {
-          "type": "date",
-          "format": "yyyy-MM-dd'T'HH:mm:ssZ"
+          "type": "date"
         },
 
         "lang": {
