--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -30,6 +30,10 @@ services:
       - 35729:35729
       - 3000:3000
 
+  kibana:
+    ports:
+      - 5601:5601
+
   ingress:
     volumes:
       - ./ingress/nginx.conf:/etc/nginx/nginx.conf:ro
